hphp/hack/test/typecheck/string_expressions11.php.exp
File "string_expressions11.php", line 17, characters 20-30:
Variable variables are not legal; all variable identifiers must be static strings. (Naming[2081])
